# advanced_programming_2024-2025

./: README.md  exam_rules.md  homework_rules.md  syllabus.md
.github/workflows/: md-to-pages.yml
exams/: README.md
exams/old/2024-01-09_simulation/: part1.md  part2.md
exercises/01/: 01-intro_unix.md
exercises/02/: 02-c++_intro.md
exercises/03/: 03-c++_classes.md
exercises/04/: 04-c++_inheritance_polymorphism.md  data.csv  data.txt
exercises/05/: 05-c++_functions_templates.md
exercises/06/: 06-c++_stl_move.md  input.txt
exercises/07/: 07-c++_make_libraries.md
exercises/08/: 08-c++_cmake.md
exercises/08/solutions/ex1/: CMakeLists.txt  ex1.cpp
exercises/08/solutions/ex2/: CMakeLists.txt  ex3.cpp  graphics_lib.hpp
exercises/09/: 09-c++_cmake_optimization_debugging_testing.md  09-c++_optimization_debugging_testing.md
exercises/09/solutions/ex3/: CMakeLists.txt
exercises/09/solutions/ex3/tests/: mean.cpp
exercises/10/: 10-py_intro.md
exercises/11/: 11-py_classes_modules.md
exercises/12/: 12-py_c++.md
exercises/12/solutions/ex3/: CMakeLists.txt  main.py  setup.py
exercises/12/solutions/ex3/include/: eigen_ops.hpp
exercises/12/solutions/ex3/src/: eigen_ops.cpp
exercises/13/: 13-py_scicomp.md  dataset.py  wish.cpp
homeworks/: homework_01.md  homework_02.md  homework_03.md
lectures/01/: 01-intro_unix.md
lectures/02/: 02-c++_intro.md
lectures/03/: 03-c++_classes.md
lectures/04/: 04-c++_inheritance_polymorphism.md
lectures/05/: 05-c++_functions_templates.md
lectures/06/: 06-c++_stl.md
lectures/07/: 07-c++_stl2_move.md
lectures/08/: 08-c++_libraries.md
lectures/09/: 09-c++_cmake_optimization_debug_test.md  09-c++_cmake_optimization_debugging_testing.md  09-c++_optimization_debugging_testing.md
lectures/10/: 10-py_intro.md
lectures/11/: 11-py_classes_modules.md
lectures/12/: 12-py_c++.md
lectures/13/: 12-py_scicomp.md  13-py_scicomp.md  lez_13.ipynb
style/: custom.css
(+188 files in other folders)
